task-8/final-exam-ing.yaml
apiVersion: v1
kind: Service
metadata:
  name: final-exam-service
  namespace: zafar
spec:
  selector:
    app: final-exam
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
