task-8/task8-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-exam-ingress
  namespace: zafar
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: zafar.nvrbckdown.uz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: final-exam
            port:
              number: 5000
